fix spacing, add keys, fix multiple rolls

--- a/frontEnd/src/components/emoji/emojiContainer.scss
+++ b/frontEnd/src/components/emoji/emojiContainer.scss
@@ -9,6 +9,11 @@
   position: absolute;
 }
 
+.e-container{
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .red {
   background-color: #E94A3F;
 }
